# llm_say

./: Cargo.toml  README.md
src/: characters.rs  main.rs
